refactoring rpa-robots estrutura CLEAN

--- a/rpa-robots/report.html
+++ b/rpa-robots/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,398],[],[[4,0,0,[],[1,371,26],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,438],[],[[4,0,5,[],[1,374,63],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ecargo Pod Download","*C:\\Users\\caiqu\\Documents\\workspace\\rpa-airflow-seed\\rpa-robots\\tests\\ecargo_pod_download.robot","*tests/ecargo_pod_download.robot","*Pod Download"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Protocolo Devolucao Main","*C:\\Users\\caiqu\\Documents\\workspace\\rpa-airflow-seed\\rpa-robots\\robot\\tests\\protocolo_devolucao_main.robot","*robot/tests/protocolo_devolucao_main.robot","*Pod Download","*<p>Execute pod download.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Ecargo Pod Download","name":"Ecargo Pod Download","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Protocolo Devolucao Main","name":"Protocolo Devolucao Main","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1760736263028;
+window.output["baseMillis"] = 1763760940815;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 412;
+window.output["generated"] = 461;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
