--- a/rpa-robots/report.html
+++ b/rpa-robots/report.html
@@ -1893,7 +1893,7 @@ window.output["suite"] = [1,2,3,0,[],[1,0,708775],[],[[4,0,5,[],[1,346,708319],[
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Download-Multi-Cte-Reports","*C:\\Users\\caiqu\\Documents\\workspace\\rpa-airflow-seed\\rpa-robots\\robot\\tests\\download-multi-cte-reports.robot","*robot/tests/download-multi-cte-reports.robot","*Download Multi CTE Reports","eNpdkMFOw0AMRH9ljnAJP1D10gSJQxFSuVfOrtsshPXKdij9e3YDCMHR9nje2Juy7eWSZ6GI/TJ7wu55gHIRdcPN8BF4BuWIp/7+FidR7ChP4mJrwRQm2DKeZI6sSBlUVN4p1nlMysFFrx2Gv7JMb4xkcGVyjqAqlnB0pWwNzIaHvsOePEzcQL9bl+TVic6ESE5wwZkdgbOrHGMy1zQuKZB8Q//7NuG1sWvMwGaV3kLDuJDWMBhVLlZpVodJcofDaypWP/LCyde72jceSX4c1t5XROs2d2X7CRS9e3E="]);
+window.output["strings"] = window.output["strings"].concat(["*","*Download-Multi-Cte-Reports","*C:\\Users\\caiqu\\Documents\\workspace\\globalti-rpa-cma\\rpa-robots\\robot\\tests\\download-multi-cte-reports.robot","*robot/tests/download-multi-cte-reports.robot","*Download Multi CTE Reports","eNpdkMFOw0AMRH9ljnAJP1D10gSJQxFSuVfOrtsshPXKdij9e3YDCMHR9nje2Juy7eWSZ6GI/TJ7wu55gHIRdcPN8BF4BuWIp/7+FidR7ChP4mJrwRQm2DKeZI6sSBlUVN4p1nlMysFFrx2Gv7JMb4xkcGVyjqAqlnB0pWwNzIaHvsOePEzcQL9bl+TVic6ESE5wwZkdgbOrHGMy1zQuKZB8Q//7NuG1sWvMwGaV3kLDuJDWMBhVLlZpVodJcofDaypWP/LCyde72jceSX4c1t5XROs2d2X7CRS9e3E="]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:11:48","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:11:49","fail":0,"id":"s1","label":"Download-Multi-Cte-Reports","name":"Download-Multi-Cte-Reports","pass":1,"skip":0}]];
